--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "leaflet.multiopacity"]
+	path = leaflet.multiopacity
+	url = https://github.com/meantrix/leaflet.multiopacity
+	shallow = true
+	registered = true
